2008-07-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-00
	* add offline->online conversions to
	OnlineConverter::convertConfiguration():
	  - PoolSource to DAQSource (was there already)
	  - PoolOutputModule to ShmStreamConsure (was there already)
	  - set MessageLogger configuration for online
	  - configure essource GlobalTag for online
	  - configure global pset 'options' for online
	  - remove global pset maxEvents for online
	  - add services DQMStore and FUDQMOuputService for online
	  - set all InputTag / string type parameters with value
	    "rawDataCollector" to "source"
	* add OnlineConverter::setMessageLoggerVerbosity()
	* add OnlineConverter::setGlobalTag()
	* add OnlineConverter::setConnect()

2008-07-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-06
	* latest webserver developments from Ulf
	* add 'runOnlineConverter' script, and some slight improvements to
	OnlineConverter::main.

2008-07-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-05
	* fix bug reported by Tulika and Bryan: freshly loaded datasets
	would appear to have been 'changed'.
	* pick up latest developments by Ulf regarding web & converter

2008-06-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-04
	* bugfix to python conversion of InputTag parameters (Ulf)

2008-06-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-03
	* fix ConfigurationModifer::orderedSequenceIterator() (relevant to
	python conversion!)

2008-06-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-02
	* OnlineConverter: add parameter 'SelectHLTOutput' to stream
	writer, and infer its value from the SelectEvent statements of the
	output modules in the configuration (temporary).

2008-06-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-01
	* converter: python fix by Ulf
